# POV-Display

./: README.md
Hardware/demo_v1/: POV_Demo.SLDPRT  POV_Demo_Hold.SLDPRT
Hardware/parts/: 2212_motor.SLDPRT  NACA.SLDPRT  NACA0025.txt  NACA0025_xyz.txt  NACA_capacitor.SLDPRT  NACA_end.SLDPRT  NACA_end_capacitor.SLDPRT  NACA_end_wire.SLDPRT  NACA_wire.SLDPRT  flange_coupling.SLDPRT  flange_coupling_adapter.SLDPRT  handle.SLDPRT  magnet_stand_2212.SLDPRT  magnet_stand_775.SLDPRT  motor_holder_2212.SLDPRT  motor_holder_775.SLDPRT  motor_holder_775_v2.SLDPRT  profile.SLDPRT  rotating_hub.SLDPRT
Software/Converter_v1/: CMakeLists.txt  main.cpp
Software/POV_Controller/: .gitignore  CMakeLists.txt
Software/POV_Controller/main/: CMakeLists.txt  POV_Controller.cpp  pov_data.txt
Software/POV_Controller/main/modules/: LED_Strip.cpp  POV_Display.cpp  Tachometer.cpp
Software/POV_Controller/main/modules/headers/: LED_Strip.h  POV_Display.h  Tachometer.h
Software/POV_Converter/: .gitignore  CMakeLists.txt  POV_Converter.cpp  POV_Converter.h  main.cpp
